# blog-craft

./: .gitignore  CHANGELOG.md  README.md  opencode.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/rules/: acceptance-matrix.md
.devcontainer/: fr-profiles.yaml
.devcontainer/dev/: devcontainer-lock.json  devcontainer.json
.github/workflows/: acceptance-report.yml  auto-tag.yml  ci.yml
.opencode/commands/: blog-craft-blog-post.md  blog-craft-bootstrap-blog.md  blog-craft-educational-writing.md  blog-craft-explainers.md  blog-craft-media-screenshots.md  blog-craft-media.md  blog-craft-papers.md  blog-craft-post-rewrite.md  blog-post.md  (+9 more)
agents/: explainer-researcher.md  post-researcher.md
docs/: ARCHITECTURE.md  CONFIG.md  USING-ON-A-HOST.md
migrations/: 001_to_002.py  002_to_003.py  003_to_004.py  004_to_005.py
scripts/: install.sh  sync-opencode.py  validate-plans.sh
templates/: manifest.yaml
tests/: conftest.py  render-template.sh  run-unit.sh  smoke-blog-post.sh  smoke-bootstrap.sh  smoke-character-sheet.sh  smoke-media.sh  smoke-papers.sh  smoke-update.sh
tools/: assemble_changelog.py  blog-post-create.sh  bootstrap-render.sh  bump_version.py  check_version_bump_needed.py  compose.py  fetch_broadsheet_fonts.py  insert-before-marker.py  media-fill.py  migrate_config.py  migrate_prompts.py  path_ownership.py  render_explainer.py  reproduce.py  scaffold-explainer.sh  scaffold-paper.sh  seed_config.py  sync_dossier_to_data.py  update.py  validate_config.py  validate_dossier.py  validate_explainers.py  validate_images.py
(+258 files in other folders)
